css/hero.css
.hero {
    position: relative;
}

.hero__video-block {
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    bottom: 0;
}

.hero__video-block::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: var(--color-background-dark-04);
    z-index: 1;
}

.hero__video {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.hero__content {
    padding-top: 60px;
    padding-bottom: 60px;
    z-index: 3;
    color: var(--color-text-white-primary);
}

.hero__logo {
    margin-bottom: 48px;
}

.hero__title {
    margin-bottom: 48px;
}

.hero__text {
    margin-bottom: 48px;
    max-width: 700px;
}

.hero__button {
    margin-bottom: 60px;
}

.hero__subtitle {
    margin-bottom: 20px;
}

.hero__carousel {
    margin-top: -60px;
}

.hero__carousel .carousel__buttons {
    margin-bottom: 20px;
    display: flex;
    justify-content: end;
    gap: 20px;
}

.hero__carousel .carousel__item {
    min-width: 300px;
    height: 100%;
}

.hero__carousel .video-card__video {
    border-radius: 10px;
    aspect-ratio: 16 / 9;
    margin-bottom: 4px;
}

@media (max-width: 480px) {
    .hero__content {
        padding-top: 32px;
        padding-bottom: 32px;
    }

    .hero__logo {
        margin-bottom: 32px;
    }

    .hero__title {
        margin-bottom: 24px;
    }

    .hero__text {
        margin-bottom: 32px;
    }

    .hero__button {
        margin-bottom: 48px;
        text-align: center;
    }

    .hero__carousel {
        margin: 0;
    }

    .hero__carousel .carousel__item {
        min-width: 240px;
    }

    .hero__carousel .carousel__buttons {
        display: none;
    }

}

